syntax = "proto3";

package sram22.verification.sim.v1;

message SimulationData {
  string name = 1;
  repeated AnalysisData analyses = 2;
}

message TranParams {
  double tstop = 1;
  double tstep = 2;
  double tstart = 3;
  bool uic = 4;
}

message AnalysisData {
  oneof params {
    TranParams tran = 1;
  }
  map<string, SimVector> values = 2;
}

message SimVector {
  oneof values {
    RealVector real = 1;
    ComplexVector complex = 2;
  }
}

message RealVector {
  repeated double v = 1;
}

message ComplexVector {
  repeated double a = 1;
  repeated double b = 2;
}
